  * checks/changelog-file:
    + [NT] Removed exception for symlinked changelogs if the
      package had an Ubuntu version.  This exception is now
      handled by the profile.  Thanks to Benjamin Drung for the
      heads up.
  * checks/circular-deps.desc:
    + [NT] Fixed typo; thanks to Nicolás Alvarez for the report
      and patch.  (Closes: #630925)
  * checks/copyright-file:
    + [NT] Stricten one of the regexes for catching left over
      helper templates.  This should prevent false-positives for
      some license texts.  Thanks to Charles Plessy for the
      report.  (Closes: #631674)
    + [NT] Use group data to determine if a package is foreign
      or not for symlinked /usr/share/doc/<pkg> dirs.  This
      avoids the need for symlinks between packages in the
      lab.
  * checks/deb-format{,.desc}:
    + [NT] Allow data.tar.xz as the third member.  Thanks to
      Ansgar Burchardt for the report and patch.
      (Closes: #632556)
    + [NT] Added test for udebs having non-gzip data members,
      since the debian-installer does not support them.  Thanks
      to Luk Claes.  (Closes: #634874)
  * checks/debhelper:
    + [NT] Do not trigger deprecation warning for dh_python if it
      is followed by a "$".  This prevents false-positives when
      a Makefile variable is used to choose between dh_python2
      and dh_python3.  Thanks to Leonid Borisenko for the report.
      (Closes: #631662)
    + [NT] Do not trigger deprecation warning for dh_python-ply,
      which Lintian incorrectly identified as dh_python.  Thanks
      to Daniele Tricoli for the report.  (Closes: #632693)
    + [NT] Fix a broken regex that caused Lintian skip brace
      expansion checks for some debhelper files.  Thanks to
      Jakub Wilk for the report and the patch.  (Closes: #632883)
    + [NT] Do not consider "debian/debhelper" a temporary debhelper
      file.  Some packages uses this a directory to store their
      debhelper files.