@@ -1,0 +1,17 @@
+# Manually maintained list of files in a deb control.tar.gz along
+# with their expected permissions.
+#
+
+clilibs    0644
+config     0755
+control    0644
+conffiles  0644
+md5sums    0644
+postinst   0755
+preinst    0755
+postrm     0755
+prerm      0755
+shlibs     0644
+symbols    0644
+templates  0644
+triggers   0644
