@@ -1,0 +1,12 @@
+# Manually maintained list of files in a udeb control.tar.gz along
+# with their expected permissions.
+#
+
+config         0755
+control        0644
+isinstallable  0755
+menutest       0755
+postinst       0755
+shlibs         0644
+symbols        0644
+templates      0644
